<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.asu</groupId>
    <artifactId>asu-cache</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <!-- MAVEN 配置 -->
        <maven.compiler.source>1.6</maven.compiler.source>
        <maven.compiler.target>1.6</maven.compiler.target>
        <maven.test.skip>false</maven.test.skip>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.16.20</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.asu</groupId>
            <artifactId>asu-util</artifactId>
            <version>1.0.2-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!-- lombok -->
            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>1.16.10.0</version>
                <configuration>
                    <encoding>utf-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>delombok</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <fork>true</fork>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <compilerArgs>
                        <!--<arg>-XX:MaxPermSize=512M</arg>-->
                        <arg>-verbose</arg>
                        <!--<arg>-Xlint:unchecked</arg>-->
                        <!--<arg>-Xlint:deprecation</arg>-->
                        <!--<arg>-bootclasspath</arg>-->
                        <!--<arg>${env.JAVA_HOME}/jre/lib/rt.jar</arg>-->
                        <!--<arg>-extdirs</arg>-->
                        <!--<arg>${project.basedir}/src/main/webapp/WEB-INF/lib</arg>-->
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>